--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -7,7 +7,7 @@ append content
       #m0ncentrage
         .moi
           p.moiPara Mika&euml;l GARCIA
-            img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' height='78' onclick='openlinkedin();')
+            img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' height='78')
           a.pdf.french(href='/static/img/cvMikaelFr.pdf')
             img.pdf.french(src='/static/img/downPdf.svg' alt='download pdf' height='64')
           a.pdf.english(href='/static/img/cvMikaelEn.pdf')
