--- a/public/css/cv.css
+++ b/public/css/cv.css
@@ -159,13 +159,13 @@ $$$$$$  POLICES &&& background:   $$$$$
 }
 
 .linkedinT {
-  display: block;
+  display: none;
   border: 2px solid #08021f;
   position: absolute;
+  bottom: 0;
   border-radius: 10px;
   height: 25px;
   margin: 5px;
-  float: left;
   background-color: yellowgreen;
 }
 
@@ -235,6 +235,7 @@ p.flags {
   animation-iteration-count: infinite;*/
   display: none;
   position: absolute;
+  bottom: 0;
   border-radius: 10px;
   float: right;
   height: 35px;
