fix paddle height

--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -56,7 +56,6 @@ append content
               .infoJeu Git
               .infoJeu bsh/zsh
               .infoJeu Photoshop
-          img.linkedin#linkedIn(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin' onclick='openlinkedin();')
           .btp#btp.french.english.spanish
             h4.french Techniques &amp; Design
             h4.english Techniques &amp; Design
@@ -81,6 +80,7 @@ append content
             .infolast.french Accueil, service et conseil commercial
             .infolast.english Incoming, service and commercial advice
             .infolast.spanish Recepción, servicio y asesoramiento comercial
+        img.linkedin#linkedIn(src='/static/img/LinkedIn_Logo.svg' alt='logolinkedin')
         .competen#experiences
           h3.french Exp&eacute;riences
           h3.english Experiences
