--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -245,4 +245,5 @@ append content
           p.jeu.spanish HOBBIES: electrónica, decoración, diseño, renovación.
           .web www.mikael.ml
 append scripts
+  script(src='/static/js/AudioContextMonkeyPatch.js' defer)
   script(src='/static/js/BrickBreaker.js' defer)
