--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -37,6 +37,7 @@ html(lang="en")
       script(src='/static/js/jquery-ui.min.js' defer)
       script(src='/static/js/react.development.js' crossorigin="anonymous")
       script(src='/static/js/react-dom.development.js' crossorigin="anonymous")
+      script(src='/static/js/AudioContextMonkeyPatch.js' defer)
       script(src='/static/js/layoutNav.js' defer)
       script(src='https://apis.google.com/js/platform.js' async defer)
       script(src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1')
