--- a/public/404.pug
+++ b/public/404.pug
@@ -2,5 +2,5 @@ extends layoutNav.pug
 append content
   .content
     .table-cell
-      #E404
+      .m0ncentrageParafoot
         img#img404(src='/static/img/pugsvg.svg')
