--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -129,11 +129,10 @@ $$$$$$  POLICES &&& background:   $$$$$
     }
 
     .moi {
-        margin: 0;
+        margin: 1%;
         border: 1px solid #08021f;
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 10px;
-        margin-bottom: 5px;
         display: none;
     }
     
@@ -146,7 +145,7 @@ $$$$$$  POLICES &&& background:   $$$$$
     }
     
     .complemen {
-        margin: 0;
+        margin: 1%;
         border: 1px solid #08021f;
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 10px;
@@ -155,7 +154,7 @@ $$$$$$  POLICES &&& background:   $$$$$
     }
     
     .complementaireT {
-        margin: 0;
+        margin: 1%;
         border: 1px solid #08021f;
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 10px;
@@ -248,7 +247,8 @@ $$$$$$  POLICES &&& background:   $$$$$
         background-color: rgba(255, 255, 255, 0.4);
         border: 1px solid #08021f;
         border-radius: 10px;
-        margin-top: 5px;;
+        margin-top: 1%;
+        margin-bottom: 1%;
         margin-left: 15%;
         margin-right: 15%;
         overflow: hidden;
@@ -273,10 +273,7 @@ $$$$$$  POLICES &&& background:   $$$$$
         color: rgba(0, 0, 0, 0.9);
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 10px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 0.5%;
-        margin-top: 0.5%;
+        margin: 1%;
         text-align: center;
         display: none;
     }
@@ -286,10 +283,7 @@ $$$$$$  POLICES &&& background:   $$$$$
         color: rgba(0, 0, 0, 0.9);
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 10px;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 0.5%;
-        margin-top: 0.5%;
+        margin: 1%;
         text-align: center;
         display: none;
     }
