--- a/public/joust.pug
+++ b/public/joust.pug
@@ -1,10 +1,8 @@
-extends layoutNav
+//extends layoutNav
 append head
  link(rel='stylesheet' href='/static/css/joust.css')
 append content
-  .content
-    .table-cell
-      #m0ncentrageAdmin
+  #JOUST
 append scripts
   script(src='/static/js/socket.io.js')
   script(src='/static/js/joust.js' defer)
