--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -37,6 +37,7 @@
 
 .LabelAdmin,
 .LabelArticle {
+  color: white;
   width: 60%;
   margin-left: 20%;
   margin-right: 20%;
@@ -68,6 +69,10 @@
   margin-left: 10%;
   margin-right: 10%;
   overflow: hidden;
+}
+
+.css3but {
+  color: white;
 }
 
 /*# sourceMappingURL=admin.css.map */
