--- a/public/css/joust.css
+++ b/public/css/joust.css
@@ -7,12 +7,17 @@
 
 .pseudo {
   width: 20%;
+  color: white;
   margin-left: 40%;
   margin-right: 40%;
   display: block;
   margin-bottom: 3%;
   text-align: center;
   font-family: monospace;
+}
+
+.css3but {
+  color: white;
 }
 
 /*# sourceMappingURL=joust.css.map */
