--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -356,6 +356,22 @@ html {
   height: 100%;
 }
 
+#INDEX {
+  display: none;
+}
+
+#CV {
+  display: none;
+}
+
+#JOUST {
+  display: none;
+}
+
+#ADM1N {
+  display: none;
+}
+
 h1,
 h2,
 h3,
@@ -382,7 +398,7 @@ nav a {
 #navBar {
   display: block;
   position: fixed;
-  background-color: rgba(19, 43, 121, 0.8);
+  background-color: rgba(29, 17, 122, 0.5);
   width: 100%;
   top: 0;
   margin: 0;
@@ -391,7 +407,7 @@ nav a {
 }
 
 .competen {
-  border: 1px solid #08021f;
+  border: 1px solid white;
   color: rgba(0, 0, 0, 0.9);
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
@@ -413,13 +429,23 @@ a.nav {
   width: 70px;
   border-radius: 28px;
   margin-bottom: 10px;
-  background: rgba(19, 43, 121, 0.449);
-  background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.476), rgba(19, 43, 121, 0.5));
+  background: transparent;
+  border: 1px solid white;
+  font-family: monospace;
+}
+
+.css3but:hover {
+  background: #3cb0fd;
+  text-decoration: none;
 }
 
 .css3button {
-  background: rgba(19, 43, 121, 0.449);
-  background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.476), rgba(19, 43, 121, 0.5));
+  background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.901), rgba(19, 43, 121, 0.5));
+}
+
+.css3button:hover {
+  background-image: linear-gradient(to bottom, rgba(60, 176, 253, 0.49), #3498db);
+  text-decoration: none;
 }
 
 .css3buttonRed {
@@ -431,19 +457,11 @@ a.nav {
   font-size: 1.1em;
   text-align: center;
   font-family: monospace;
-  background: rgba(145, 31, 31, 0.49);
-  background-image: linear-gradient(to bottom, rgba(52, 152, 219, 0.449), rgba(145, 31, 31, 0.5));
-}
-
-.css3button:hover {
-  background: #3cb0fd;
-  background-image: linear-gradient(to bottom, rgba(60, 176, 253, 0.49), #3498db);
-  text-decoration: none;
+  background-image: linear-gradient(to bottom, rgba(139, 47, 47, 0.9), rgba(129, 44, 44, 0.5));
 }
 
 .css3buttonRed:hover {
-  background: #3cb0fd;
-  background-image: linear-gradient(to bottom, #fd3c3c, #db3434);
+  background-image: linear-gradient(to bottom, rgba(253, 60, 60, 0.8), rgba(253, 60, 60, 0.3));
   text-decoration: none;
 }
 
@@ -463,16 +481,35 @@ a.nav {
 #m0ncentrage {
   display: none;
   margin-top: 60px;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
 }
 
 #m0ncentrageAdmin {
   display: block;
   position: relative;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 1%;
+  margin-right: 1%;
   margin-top: 70px;
   margin-bottom: 100px;
+}
+
+.m0ncentrageParafoot {
+  border: 1px solid white;
+  background-color: rgba(183, 210, 214, 0.1);
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2.5%;
+  margin-top: 0.5%;
+  text-align: center;
+}
+
+.m0ncentrage404 {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2.5%;
+  margin-top: 0.5%;
+  text-align: center;
 }
 
 .paraFoot {
@@ -483,7 +520,7 @@ a.nav {
   margin-left: 7px;
   margin-right: 7px;
   margin-bottom: 10px;
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
 #BtnJs0nPl4Y {
@@ -522,7 +559,7 @@ a.nav {
   height: 50px;
   width: 100%;
   bottom: 0;
-  background-color: rgba(19, 43, 121, 0.6);
+  background-color: rgba(29, 17, 122, 0.5);
   font-size: 1em;
 }
 
