--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -16,13 +16,13 @@ html(lang="en")
     nav#navBar
       ul
         li 
-          a.nav(href="javascript:delay('./nomPage?r=index')" class='css3button') Intro
+          a#intro.nav(class='css3button') Intro
         li
-          a.nav(href="javascript:delay('./nomPage?r=jeuCV')" class='css3button') Resume
+          a#resume.nav(class='css3button') Resume
         li
-          a.nav(href="javascript:delay('./nomPage?r=joust')" class='css3button') J0usT
+          a#joust.nav(class='css3button') J0usT
         li
-          a.nav(href="javascript:delay('./nomPage?r=adm1n')" class='css3button') Admin
+          a#admin.nav(class='css3button') Admin
     block content
     block foot
       #footer
