--- a/public/index.pug
+++ b/public/index.pug
@@ -18,3 +18,4 @@ append content
           include adm1n.pug
 append scripts
   script(src='/static/js/soleil.js')
+  script(src='/static/js/BrickBreaker.js')
