--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -35,6 +35,7 @@ html(lang="en")
     block scripts
       script(src='/static/js/jquery-3.3.1.min.js' defer)
       script(src='/static/js/jquery-ui.min.js' defer)
+      script(src='/static/js/socket.io.js')
       script(src='/static/js/react.development.js' crossorigin="anonymous")
       script(src='/static/js/react-dom.development.js' crossorigin="anonymous")
       script(src='/static/js/AudioContextMonkeyPatch.js' defer)
