--- a/public/index.pug
+++ b/public/index.pug
@@ -17,5 +17,5 @@ append content
           include joust.pug
           include adm1n.pug
 append scripts
-  script(src='/static/js/soleil.js')
-  script(src='/static/js/BrickBreaker.js')
+  script(src='/static/js/soleil.js' defer)
+  script(src='/static/js/BrickBreaker.js' defer)
