--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -28,9 +28,9 @@ append content
       h3.french Comp&eacute;tences
       h3.english Skills
       h3.spanish  Competencias
-      .informatiquesCont.french.english.spanish
+      .informatiquesCont.french.english.spanish#informatique
         h4 Front-End Development
-        .informatiques#informatique
+        .informatiques
           .infoJeu HTML5
           .infoJeu PUG
           .infoJeu CSS3
@@ -41,14 +41,14 @@ append content
           .infoJeu AngularJS
           .infoJeu ReactJS
         h4 Back-End Development
-        .informatiques#informatique
+        .informatiques
           .infoJeu Apache
           .infoJeu NodeJS
           .infoJeu ExpressJS
           .infoJeu MongoDb
           .infoJeu WebSocket
         h4 Tools
-        .informatiquesLast#informatique
+        .informatiquesLast
           .infoJeu Unix
           .infoJeu Windows
           .infoJeu Git
