sonic speed fix

--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -33,9 +33,13 @@ html {
 }
 #JOUST {
     display: none;
+    height: 800px;
+    background-color: rgba(19, 42, 121, 0);
 }
 #ADM1N {
     display: none;
+    height: 800px;
+    background-color: rgba(19, 42, 121, 0);
 }
 
 h1,
