--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -16,7 +16,7 @@ html(lang="en")
     nav#navBar
       ul
         li 
-          a#intro.nav(class='css3button') Intro
+          a#intro.nav(href='http://127.0.0.1' class='css3button') Intro
         li
           a#resume.nav(class='css3button') Resume
         li
