--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -366,10 +366,14 @@ html {
 
 #JOUST {
   display: none;
+  height: 800px;
+  background-color: rgba(19, 42, 121, 0);
 }
 
 #ADM1N {
   display: none;
+  height: 800px;
+  background-color: rgba(19, 42, 121, 0);
 }
 
 h1,
