--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -11,12 +11,13 @@ html(lang="en")
       meta(property='og:description' content='My Javascript Portfolio')
       meta(property='og:url' content='//mikael.ml')
       link(rel='stylesheet' href='/static/css/styles.css')
+      link(rel='manifest' href='/static/mikael.manifest')
       title Junior Full Stack Javascript Developer
   body
     nav#navBar
       ul
         li 
-          a#intro.nav(href='http://mikael.ml' class='css3button') Intro
+          a#intro.nav(href='/' class='css3button') Intro
         li
           a#resume.nav(class='css3button') Resume
         li
