collision fix breaker

--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -40,6 +40,7 @@ append content
           .infoJeu BootStrap
           .infoJeu AngularJS
           .infoJeu ReactJS
+          .infoJeu WebAudio API
         h4 Back-End Development
         .informatiques
           .infoJeu Apache
