--- a/public/index.pug
+++ b/public/index.pug
@@ -14,7 +14,7 @@ append content
                 source(src='/static/video/theOneFinal2.mp4' type='video/mp4')
             button#BtnJs0nPl4Y PLAY
           include jeuCV.pug
-          include joust.pug
+          //include joust.pug
           include adm1n.pug
 append scripts
   script(src='/static/js/soleil.js' defer)
