--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -26,20 +26,40 @@ html {
 
 
 #INDEX {
-    display: none;
+    //display: none;
+    border: 1px solid white;
+    background-color: rgba(183, 210, 214, 0.1);
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2.5%;
+    margin-top: 0.5%;
+    text-align: center;
 }
 #CV {
-    display: none;
-}
-#JOUST {
-    display: none;
-    height: 800px;
-    background-color: rgba(19, 42, 121, 0);
+    //display: none;
+    border: 1px solid white;
+    background-color: rgba(183, 210, 214, 0.1);
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2.5%;
+    margin-top: 0.5%;
+    text-align: center;
 }
 #ADM1N {
-    display: none;
-    height: 800px;
-    background-color: rgba(19, 42, 121, 0);
+    //display: none;
+    border: 1px solid white;
+    background-color: rgba(183, 210, 214, 0.1);
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2.5%;
+    margin-top: 0.5%;
+    text-align: center;
+}
+#JOUST {
+    //display: none;
 }
 
 h1,
