--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -149,7 +149,7 @@ $$$$$$  POLICES &&& background:   $$$$$
         border: 1px solid #08021f;
         background-color: rgba(255, 255, 255, 0.3);
         border-radius: 10px;
-        margin-bottom: 60px;
+        margin-bottom: 1%;
         display: none;
     }
     
