--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -22,7 +22,7 @@ append content
       img#english(src='/static/img/uk.svg' alt='English' height='30')
       img#french(src='/static/img/france.svg' alt='Français' height='30')
       img#spanish(src='/static/img/spain.svg' alt='spanish' height='30')
-    .metier#metier
+    #metier
       h4 Junior FullStack Javascript Developer
     .competen#competen
       h3.french Comp&eacute;tences
