--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -16,6 +16,32 @@ $myfont: monospace;
 $$$$$$  BALISES HTML   $$$$$
 ****/
 
+    #metier {
+        -webkit-transition: background 1.0s ease-in-out;
+        -ms-transition:     background 1.0s ease-in-out;
+        transition:         background 1.0s ease-in-out;
+        border-radius: 10px;
+        margin-top: 1%;
+        margin-bottom: 1%;
+        margin-left: 15%;
+        margin-right: 15%;
+        border: 1px solid #08021f;
+    }
+
+    .backgroundRed{
+        //background-color: rgba(255, 0, 0, 0.5);
+        text-align: center;
+        font-family: monospace;
+        background-color: rgba(255, 255, 255, 0.4);
+        border: 1px solid #08021f;
+        border-radius: 10px;
+        margin-top: 1%;
+        margin-bottom: 1%;
+        margin-left: 15%;
+        margin-right: 15%;
+        overflow: hidden;
+    }
+
     p.jeu {
         @extend %parag;
         text-align: center;
