--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -2,7 +2,7 @@ append head
  link(rel='stylesheet' href='/static/css/admin.css') 
 append content
   #ADM1N
-    h1 LOG IN
+    h1.log LOG IN
     form#adm1n(action='/layoutAdmin' method='post')
       label.LabelAdmin(for='POST-user') user
       input#POST-user.InputAdmin(type='text' name='user')
