resume update ibm

--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -12,10 +12,10 @@ append content
         img.pdf.english(src='/static/img/downPdf.svg' alt='download pdf' height='64')
       a.pdf.spanish(href='/static/img/cvMikaelEs.pdf')
         img.pdf.spanish(src='/static/img/downPdf.svg' alt='download pdf' height='64')
-      p.moiPara 35 y/o
+      p.moiPara 36 y/o
       p.moiPara +33 695 490 777
-      p.moiPara 22 rue du Bourg Tibourg
-      p.moiPara 75004 Paris, FR
+      p.moiPara 11 rue Armand Cambon
+      p.moiPara 82000 Montauban, FR
       p.moiPara
         a.mail(href='mailto:garcia.mikael@gmail.com') garcia.mikael@gmail.com
     p.flags
@@ -43,6 +43,8 @@ append content
           .infoJeu WebAudio API
         h3 Back-End Development
         .informatiques
+          .infoJeu IBM CL RPG
+          .infoJeu SQL
           .infoJeu Apache
           .infoJeu NodeJS
           .infoJeu ExpressJS
@@ -50,10 +52,11 @@ append content
           .infoJeu WebSocket
         h3 Tools
         .informatiquesLast
+          .infoJeu IBM i
           .infoJeu Unix
           .infoJeu Windows
           .infoJeu Git
-          .infoJeu bsh/zsh
+          .infoJeu AutoCAD
           .infoJeu Photoshop
       .btp#btp.french.english.spanish
         h3.french Techniques &amp; Design
@@ -84,6 +87,12 @@ append content
       h2.french Exp&eacute;riences
       h2.english Experiences
       h2.spanish Experiencia profesional
+      .jobs
+        h3 IBM i Developer
+        .infojob.french Programmation CL RPG SQL IBM i, OCSI janvier 2019
+        .infojob.english CL RPG SQL IBM i programmer, OCSI january 2019
+        .infojob.spanish Programmation CL RPG SQL IBM i, OCSI enero 2019
+      hr
       .jobs
         h3 Webmaster
         .infojob.french Mise &agrave; jour de la base de donn&eacute;es site Ecommerce (magento) www.snow-concept.com, l&rsquo;Alpe d&rsquo;Huez, d&eacute;cembre 2016
@@ -188,9 +197,11 @@ append content
       h2.english Training
       h2.spanish Formación
       .jobs
-        h3.french D&eacute;veloppeur JavaScript FullStack
-        h3.english FullStack Javascript Developer
-        h3.spanish Desarollador Javascript de pila completa
+        h3 IBM i Engineer (2018, OCSI Paris I)
+        .infojob RPG IV, CL, SQL, webservices
+        hr
+      .jobs
+        h3 FullStack Javascript Developer (2017, IFOCOP Paris XI)
         .infojob.french Développement et management d&apos;un projet web
         .infojob.english Development and management of a web project
         .infojob.spanish Desarolla y gestión de un proyecto web
@@ -202,9 +213,9 @@ append content
         .infojob.spanish Creación de aplicaciones web y móviles ricas en el back-end de JS
         hr
       .jobs
-        h3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin
-        h3.english Construction Engineer Technician Drawing Option
-        h3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo 
+        h3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin (2009, AFPA la valette-du-var)
+        h3.english Construction Engineer Technician Drawing Option (2009, AFPA la valette-du-var)
+        h3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo (2009, AFPA la valette-du-var)
         .infojob Photoshop, Autocad, Archicad, Artlantis
         .infojob.french Design, techniques et normes de construction
         .infojob.english Design, techniques and construction standards
@@ -214,7 +225,7 @@ append content
         .infojob.spanish Nociones de urbanismo y carreteras
         hr
       .jobs
-        h3 IUT informatique d&apos;Orl&eacute;ans
+        h3 IUT informatique (2003, Orl&eacute;ans)
         .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
         .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
         .infojob.french Programmation: Langage C, C++, SQL, bsh, assembly language
@@ -226,9 +237,12 @@ append content
         .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
         hr
       .jobs
-        h3.french Baccalaur&eacute;at Scientifique: Sp&eacute;cialit&eacute; physique-chimie
-        h3.english Scientific Baccalaureate Diploma: Specialty physics-chemistry
-        h3.spanish Bachillerato Científico: Especialidad física-química        
+        h3.french Baccalaur&eacute;at Scientifique (2001, Orléans)
+        .infojob.french Sp&eacute;cialit&eacute; physique-chimie
+        h3.english Scientific Baccalaureate Diploma (2001, Orléans)
+        .infojob.english Specialty physics-chemistry
+        h3.spanish Bachillerato Científico (2001, Orléans)
+        .infojob.spanish Especialidad física-química        
     .complemen#complementaire
       h2.french El&eacute;ments Compl&eacute;mentaires
       h2.english Additional Info
