--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -197,11 +197,13 @@ append content
       h2.english Training
       h2.spanish Formación
       .jobs
-        h3 IBM i Engineer (2018, OCSI Paris I)
+        h3 IBM i Engineer
+        h5 2018, OCSI Paris I
         .infojob RPG IV, CL, SQL, webservices
         hr
       .jobs
-        h3 FullStack Javascript Developer (2017, IFOCOP Paris XI)
+        h3 FullStack Javascript Developer
+        h5 2017, IFOCOP Paris XI
         .infojob.french Développement et management d&apos;un projet web
         .infojob.english Development and management of a web project
         .infojob.spanish Desarolla y gestión de un proyecto web
@@ -213,9 +215,12 @@ append content
         .infojob.spanish Creación de aplicaciones web y móviles ricas en el back-end de JS
         hr
       .jobs
-        h3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin (2009, AFPA la valette-du-var)
-        h3.english Construction Engineer Technician Drawing Option (2009, AFPA la valette-du-var)
-        h3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo (2009, AFPA la valette-du-var)
+        h3.french TP de technicien d&rsquo;&eacute;tude en b&acirc;timent option dessin
+        h5.french 2009, AFPA la valette-du-var
+        h3.english Construction Engineer Technician Drawing Option
+        h5.english 2009, AFPA la valette-du-var
+        h3.spanish Técnico de Ingeniería de Construcción Opción de Dibujo
+        h5.spanish 2009, AFPA la valette-du-var
         .infojob Photoshop, Autocad, Archicad, Artlantis
         .infojob.french Design, techniques et normes de construction
         .infojob.english Design, techniques and construction standards
@@ -225,7 +230,8 @@ append content
         .infojob.spanish Nociones de urbanismo y carreteras
         hr
       .jobs
-        h3 IUT informatique (2003, Orl&eacute;ans)
+        h3 IUT informatique
+        h5 2003, Orl&eacute;ans
         .infojob.french Syst&eacute;mes et R&eacute;seaux: Administration et d&eacute;ploiementent r&eacute;seau de syst&egrave;mes en environnement Linux, regexp/assembleur
         .infojob.french Base de Donn&eacute;es: Analyse (merise), conception (MCD, MCT), maintenance
         .infojob.french Programmation: Langage C, C++, SQL, bsh, assembly language
@@ -237,11 +243,14 @@ append content
         .infojob.spanish Programación: Langage C, C++, SQL, bsh, assembly language
         hr
       .jobs
-        h3.french Baccalaur&eacute;at Scientifique (2001, Orléans)
+        h3.french Baccalaur&eacute;at Scientifique
+        h5.french 2001, Orléans
         .infojob.french Sp&eacute;cialit&eacute; physique-chimie
-        h3.english Scientific Baccalaureate Diploma (2001, Orléans)
+        h3.english Scientific Baccalaureate Diploma
+        h5.english 2001, Orléans
         .infojob.english Specialty physics-chemistry
-        h3.spanish Bachillerato Científico (2001, Orléans)
+        h3.spanish Bachillerato Científico
+        h5.spanish 2001, Orléans
         .infojob.spanish Especialidad física-química        
     .complemen#complementaire
       h2.french El&eacute;ments Compl&eacute;mentaires
