--- a/public/index.pug
+++ b/public/index.pug
@@ -7,7 +7,7 @@ append content
           #INDEX
             .paraFoot Welcome to my devlab
               #s0leil
-            .paraFoot My name is Mikael, I'm a javascript developer.
+            .paraFoot My name is Mikael, I'm a javascript &amp IBM developer.
             .paraFoot This website hosts my skills, projects and experiences.
               video#jugglejungle(loop='' poster='/static/img/kuansiFalls.jpg')
                 source(src='/static/video/theOneFinal2.webm' type='video/webm')
