new ball sprite

--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -43,7 +43,8 @@ append content
           .infoJeu WebAudio API
         h3 Back-End Development
         .informatiques
-          .infoJeu IBM CL RPG
+          .infoJeu IBM CL
+          .infoJeu RPG
           .infoJeu SQL
           .infoJeu Apache
           .infoJeu NodeJS
@@ -88,10 +89,10 @@ append content
       h2.english Experiences
       h2.spanish Experiencia profesional
       .jobs
-        h3 IBM i Developer
-        .infojob.french Programmation CL RPG SQL IBM i, OCSI janvier 2019
-        .infojob.english CL RPG SQL IBM i programmer, OCSI january 2019
-        .infojob.spanish Programmation CL RPG SQL IBM i, OCSI enero 2019
+        h3 IBM i DevOp junior engineer
+        .infojob.french CL, RPG IV, db2, OCSI janvier 2019
+        .infojob.english CL, RPG, db2, OCSI january 2019
+        .infojob.spanish CL, RPG, db2, OCSI enero 2019
       hr
       .jobs
         h3 Webmaster
@@ -122,11 +123,11 @@ append content
         .infojob.spanish Estudio de proyectos de construcción de tiendas "Castorama" Toulouse Union y Antibes, ingeniería AUXITEC, Hyères, septiembre de 2012
         hr
       .jobs
-        h3.french Developpeur PHP HTML CSS
+        h3.french Developpeur web
         .infojob.french Introduction &agrave; JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
-        h3.english PHP CSS HTML Developer
+        h3.english Web Developer
         .infojob.english Introduction to JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
-        h3.spanish Desarrollador PHP CSS HTML
+        h3.spanish Web developer
         .infojob.spanish introducción a JavaScript (JQuery) www.stand-service.com Alphabet Stand Service La Garde, 2012
         hr
       .jobs
