--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -31,31 +31,29 @@ append content
       .informatiquesCont.french.english.spanish#informatique
         h3 Front-End Development
         .informatiques
-          .infoJeu HTML5
-          .infoJeu PUG
-          .infoJeu CSS3
-          .infoJeu SCSS
           .infoJeu JavaScript
+          .infoJeu AngularJS
           .infoJeu JQUERY
           .infoJeu BootStrap
-          .infoJeu AngularJS
-          .infoJeu ReactJS
+          .infoJeu PUGjs
+          .infoJeu HTML5
+          .infoJeu SCSS
           .infoJeu WebAudio API
         h3 Back-End Development
         .informatiques
           .infoJeu IBM CL
-          .infoJeu RPG
+          .infoJeu IBM RPG
           .infoJeu SQL
-          .infoJeu Apache
           .infoJeu NodeJS
           .infoJeu ExpressJS
           .infoJeu MongoDb
           .infoJeu WebSocket
+          .infoJeu Apache
         h3 Tools
         .informatiquesLast
           .infoJeu IBM i
-          .infoJeu Unix
-          .infoJeu Windows
+          .infoJeu Mac OSx
+          .infoJeu MS Windows
           .infoJeu Git
           .infoJeu AutoCAD
           .infoJeu Photoshop
