--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -6,13 +6,13 @@ html(lang="en")
       meta(name="viewport", content="width=device-width, initial-scale=0.7")
       meta(http-equiv="X-UA-Compatible", content="ie=edge")
       meta(name='description' content='My Javascript Portfolio')
-      meta(property='og:title' content='Junior Full Stack Javascript Developer')
+      meta(property='og:title' content='IBM RPG & Javascript Developer')
       meta(property='og:image' content='//mikael.ml/static/img/ogImage.png')
       meta(property='og:description' content='My Javascript Portfolio')
       meta(property='og:url' content='//mikael.ml')
       link(rel='stylesheet' href='/static/css/styles.css')
       link(rel='manifest' href='/static/mikael.manifest')
-      title Junior Full Stack Javascript Developer
+      title IBM RPG &amp; Javascript Developer
   body
     nav#navBar
       ul
