jquery latency test

--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -197,7 +197,7 @@ append content
       h2.spanish Formación
       .jobs
         h3 IBM i Engineer
-        h5 2018, OCSI Paris I
+        h5 2018, Pepiniere IBM Paris I
         .infojob RPG IV, CL, SQL, webservices
         hr
       .jobs
