--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+doctype html
 html(lang="en")
   head
     block head
+      title IBM RPG &amp; Javascript Developer
       meta(charset="UTF-8")
       meta(name="viewport", content="width=device-width, initial-scale=0.7")
       meta(http-equiv="X-UA-Compatible", content="ie=edge")
@@ -12,7 +13,6 @@ html(lang="en")
       meta(property='og:url' content='//mikael.ml')
       link(rel='stylesheet' href='/static/css/styles.css')
       link(rel='manifest' href='/static/mikael.manifest')
-      title IBM RPG &amp; Javascript Developer
   body
     nav#navBar
       ul
