--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -23,7 +23,7 @@ append content
       img#french(src='/static/img/france.svg' alt='Français' height='30')
       img#spanish(src='/static/img/spain.svg' alt='spanish' height='30')
     #metier
-      h1 Junior FullStack Javascript Developer
+      h1 IBM RPG &amp; Javascript Developer
     .competen#competen
       h2.french Comp&eacute;tences
       h2.english Skills
