--- a/public/layoutAdmin.pug
+++ b/public/layoutAdmin.pug
@@ -1,5 +1,6 @@
 extends layoutNav.pug
 append head
+  link(rel='stylesheet' href='/static/DataTables-1.10.18/css/jquery.dataTables.min.css')
   link(rel='stylesheet' href='/static/css/layoutAdmin.css')
   img#menuAdmin(src='/static/img/sideNav.svg' onclick='openSideNav();')
   #m0nSideNav.sidenav
@@ -17,6 +18,7 @@ block content
       h2 session:
       h2=ma535510n
 append scripts
+  script(src='/static/DataTables-1.10.18/js/jquery.dataTables.min.js')
   script.
     function openSideNav() {
       document.getElementById("m0nSideNav").style.width = "20%";
