--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -32,10 +32,10 @@ html(lang="en")
           a.minilogR(href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
-      script(src='/static/js/jquery-3.3.1.min.js' defer)
-      script(src='/static/js/jquery-ui.min.js' defer)
+      script(src='/static/js/jquery-3.3.1.min.js')
+      script(src='/static/js/jquery-ui.min.js')
       script(src='/static/js/socket.io.js')
-      script(src='/static/js/layoutNav.js' defer)
+      script(src='/static/js/layoutNav.js')
       script(src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1')
       // Global site tag (gtag.js) - Google Analytics
       script.
