clean serverMikael.js

--- a/public/OkArticle.pug
+++ b/public/OkArticle.pug
@@ -1,6 +1,7 @@
 include layoutAdmin.pug
 block content
-  #m0ncentrageCV
-    #maDivTest
+  #m0ncentrageAdmin
+    .m0ncentrageParafoot
+      #maDivTest
       h1 New Article
       h1 Article enregistré en bd
