--- a/public/layoutAdmin.pug
+++ b/public/layoutAdmin.pug
@@ -10,13 +10,12 @@ append head
     a(href='./pagelisteArticle') Modifier
 
 block content
-  #m0ncentrageCV
-    #maFirstDiv
-      h1 Welcome Admin
-      h2 ID:
-      h2=m0nID535510n
-      h2 session:
-      h2=ma535510n
+  #m0ncentrageAdmin
+    .m0ncentrageParafoot
+      #maDivTest
+        h1 Welcome Admin
+        h2=m0nID535510n
+        h2=ma535510n
 append scripts
   script(src='/static/DataTables-1.10.18/js/jquery.dataTables.min.js')
   script.
