--- a/public/m0nFormArticle.pug
+++ b/public/m0nFormArticle.pug
@@ -1,7 +1,8 @@
 include layoutAdmin.pug
 block content
-  #m0ncentrageCV
-    #maDivTest
+  #m0ncentrageAdmin
+    .m0ncentrageParafoot
+      #maDivTest
       h1 New Article
       form#newArticle(action='/OkArticle' method='post')
         label.LabelArticle(for='POST-titre') Titre
