--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -17,11 +17,11 @@ html(lang="en")
     nav#navBar
       ul
         li 
-          a#intro.nav.js-scrollTo(href='#INDEX' class='css3button') Intro
+          a#intro.nav.js-scrollTo(href='http://mikael.ml/#INDEX' class='css3button') Intro
         li
-          a#resume.nav.js-scrollTo(href='#CV' class='css3button') Resume
+          a#resume.nav.js-scrollTo(href='http://mikael.ml/#CV' class='css3button') Resume
         li
-          a#admin.nav.js-scrollTo(href='#ADM1N' class='css3button') Admin
+          a#admin.nav.js-scrollTo(href='http://mikael.ml/#ADM1N' class='css3button') Admin
     block content
     block foot
       #footer
